# codename_ai

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: pythonpackage.yml
codename_ai/: sample.py
codename_ai/data/: ipa_noun.py  noun_small.py  wordpack.py
codename_ai/model/: boss.py  candidate_words.py  filtering.py  game.py  scorer.py  scoring.py
codename_ai/model/bert_bl/: bert_model.py
codename_ai/model/chatgpt_model/: chatgpt_model.py
codename_ai/model/pmi/: wiki_pmi.py
codename_ai/model/word2vec_bl/: word2vec_model.py
codename_ai/model/wordnet_model/: wordnet_model.py
codename_ai/runner/: validation.py
codename_ai/utils/: template.py
scripts/: run_bert_model.py  run_chatgpt_model.py  run_chatgpt_model_2.py  run_chatgpt_model_2_validation.py  run_chatgpt_plus_wikipmi_model.py  run_chatgpt_pmi_suppressed_plus_wikipmi_model.py  run_chatgpt_pmi_suppressed_plus_wikipmi_model_plus_wordnet.py  run_chatgpt_wordnet_model.py  run_wiki_pmi_model.py  run_word2vec_model.py  run_wordnet_model.py
scripts/prebuild_scripts/: create_jp_katakana_dict.py
scripts/prebuild_scripts/make_word_kyoki_dict/: make_kyoki_db.py  (+2 more)
test/unit_test/: test_sample.py
validation_output/: validation_output_bert.txt  validation_output_chatgpt.txt  validation_output_chatgpt_plus_pmi.txt  validation_output_chatgpt_pmi_suppressed_plus_pmi.txt  validation_output_chatgpt_pmi_suppressed_plus_pmi_plus_wordnet.txt  validation_output_enhanced_chatgpt.txt  validation_output_wiki_pmi.txt  validation_output_word2vec.txt  validation_output_wordnet.txt
(+6 files in other folders)
