[tool.poetry]
name = "codename_ai"
version = "1.0.0"
description = "What's this project?"
authors = ["mski_iksm"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.9"
gokart = "*"
gensim = "^4.3.1"
pybind11 = "^2.10.4"
jupyter = "^1.0.0"
pytest = "^7.2.2"
transformers = "^4.27.4"
sentence-transformers = "^2.2.2"
fugashi = "^1.2.1"
ipadic = "^1.0.0"
openai = "^0.27.4"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

